[tool.poetry]
name = "streamlit_template"
version = "0.1.0"
description = "A basic template to create streamlit apps from."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"
SQLAlchemy = "^1.4.46"
psycopg2 = "^2.9.5"
scikit-learn = "^1.2.0"
watchdog = "^2.2.1"
matplotlib = "^3.6.3"
lorem = "^0.1.1"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
